deployment/deployment-caller-qa.yml
apiVersion: v1
kind: Service
metadata:
  name: caller-service
  namespace: qa
  labels:
    app: caller-service
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: caller-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: caller-service
  namespace: qa
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: caller-service
        version: v1
    spec:
      containers:
        - name: caller-service
          image: docker08.helpchat.in:5000/test-istio:s4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: caller-service
  namespace: qa
spec:
  hosts:
    - "caller-qa-test.172.16.1.0.nip.io"
  gateways:
    - qa-gateway
  http:
    - route:
        - destination:
            port:
              number: 8090
            host: caller-service
