deployment/destionation-rule-qa.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "qa"
spec:
  host: "*.qa.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
